# jtaer-repl

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile
Downloads/jtaer_github_repo/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt
Downloads/jtaer_github_repo/artifacts/: README.md
Downloads/jtaer_github_repo/artifacts/tables/: fe_main.tex
Downloads/jtaer_github_repo/config/: config.yaml
Downloads/jtaer_github_repo/config/.github/workflows/: ci.yml
Downloads/jtaer_github_repo/data/interim/: it_index.csv
Downloads/jtaer_github_repo/data/processed/: firm_quarter.csv
Downloads/jtaer_github_repo/data/raw/: fin.csv  it_labels.csv
Downloads/jtaer_github_repo/docs/: REPLICATION.md
Downloads/jtaer_github_repo/reports/: .gitignore
Downloads/jtaer_github_repo/src/data/: build_industry_waves_from_it.py  fetch_fin_from_sec.py  prepare_fin_compustat.py
Downloads/jtaer_github_repo/src/models/: fe_panel.py  iv_panel.py
Downloads/jtaer_github_repo/src/utils/: io.py
Downloads/jtaer_github_repo/tests/: test_ccc.py  test_eventstudy.py
artifacts/tables/: fe_main.csv  iv_main.txt
data/private/: README.md
data/raw/: README.md
docs/: DATA_AVAILABILITY.md  TUTORIAL_ZH.md  codebook.md
docs/templates/: ciks_template.csv  event_dates_template.csv  industry_map_template.csv  industry_waves_template.csv  it_labels_template.csv
scripts/: freeze_artifacts.py  run_private.bat  run_private.sh  run_public.sh  run_with_config.py
src/data/: download_gscpi.py  prepare_10k_sec.py
src/features/: compute_ccc.py  (+1 more)
(+7 files in other folders)
